--- a/test.html
+++ b/test.html
@@ -61,6 +61,12 @@
             flex-wrap: wrap;
             gap: 30px;
             justify-content: center;
+            animation: chaos 10s infinite ease-in-out;
+        }
+
+        @keyframes chaos {
+            0%, 100% { transform: rotate(0deg); }
+            50% { transform: rotate(3deg); }
         }
 
         .image-container {
@@ -71,69 +77,23 @@
             border: 4px solid rgba(255, 115, 0, 0.8);
             border-radius: 15px;
             background: rgba(255, 115, 0, 0.2);
+            transform: rotate(calc(-10deg + 20deg * random()));
             box-shadow: 0 0 20px rgba(255, 115, 0, 0.7);
             transition: transform 0.3s, box-shadow 0.3s;
+            animation: move-around 6s infinite ease-in-out; /* Fotoğraflar bağımsız hareket ediyor */
         }
 
-        /* Bağımsız hareket animasyonları */
-        .image-container:nth-child(1) {
-            animation: move-around-1 6s infinite ease-in-out;
+        @keyframes move-around {
+            0% { transform: translateY(0) rotate(0deg); }
+            25% { transform: translateY(-20px) rotate(5deg); }
+            50% { transform: translateY(20px) rotate(-5deg); }
+            75% { transform: translateY(-10px) rotate(2deg); }
+            100% { transform: translateY(0) rotate(0deg); }
         }
 
-        @keyframes move-around-1 {
-            0% { transform: translate(0, 0); }
-            25% { transform: translate(50px, 30px); }
-            50% { transform: translate(100px, -50px); }
-            75% { transform: translate(0, -30px); }
-            100% { transform: translate(30px, 30px); }
-        }
-
-        .image-container:nth-child(2) {
-            animation: move-around-2 7s infinite ease-in-out;
-        }
-
-        @keyframes move-around-2 {
-            0% { transform: translate(0, 0); }
-            25% { transform: translate(-40px, 60px); }
-            50% { transform: translate(20px, -60px); }
-            75% { transform: translate(50px, 40px); }
-            100% { transform: translate(-60px, -20px); }
-        }
-
-        .image-container:nth-child(3) {
-            animation: move-around-3 8s infinite ease-in-out;
-        }
-
-        @keyframes move-around-3 {
-            0% { transform: translate(0, 0); }
-            25% { transform: translate(30px, -80px); }
-            50% { transform: translate(-80px, 40px); }
-            75% { transform: translate(60px, -20px); }
-            100% { transform: translate(0, 30px); }
-        }
-
-        .image-container:nth-child(4) {
-            animation: move-around-4 6s infinite ease-in-out;
-        }
-
-        @keyframes move-around-4 {
-            0% { transform: translate(0, 0); }
-            25% { transform: translate(70px, -20px); }
-            50% { transform: translate(-50px, 30px); }
-            75% { transform: translate(40px, -40px); }
-            100% { transform: translate(0, 50px); }
-        }
-
-        .image-container:nth-child(5) {
-            animation: move-around-5 9s infinite ease-in-out;
-        }
-
-        @keyframes move-around-5 {
-            0% { transform: translate(0, 0); }
-            25% { transform: translate(-60px, 50px); }
-            50% { transform: translate(30px, -40px); }
-            75% { transform: translate(80px, 20px); }
-            100% { transform: translate(-50px, -30px); }
+        .image-container:hover {
+            transform: scale(1.1) rotate(0deg);
+            box-shadow: 0 0 40px rgba(255, 115, 0, 1);
         }
 
         .image-container img {
@@ -141,11 +101,6 @@
             height: 100%;
             object-fit: cover;
             transition: transform 0.3s;
-        }
-
-        .image-container:hover {
-            transform: scale(1.1);
-            box-shadow: 0 0 40px rgba(255, 115, 0, 1);
         }
 
         .image-container:hover img {
@@ -201,19 +156,35 @@
             color: white;
             cursor: pointer;
         }
+
+        /* Video Styling */
+        .video-container {
+            position: relative;
+            width: 90%;
+            max-width: 800px;
+            margin-top: 40px;
+        }
+
+        video {
+            width: 100%;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(255, 115, 0, 0.7);
+        }
     </style>
 </head>
 <body>
 
-    <h1>JEGE53</h1>
-    <p>PND TYİX CARMAN </p>
+    <h1>🎃 Halloween In Tpf 👻</h1>
+    <p></p>
 
+    <!-- Animasyonlu Emojiler -->
     <div class="emoji">🎃</div>
-    <div class="emoji">👻</div>
     <div class="emoji">🕸️</div>
-    <div class="emoji">🧛‍♂️</div>
+    <div class="emoji">👻</div>
     <div class="emoji">🕷️</div>
+    <div class="emoji">💀</div>
 
+    <!-- Fotoğraf Galerisi -->
     <div class="gallery">
         <div class="image-container">
             <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Resim 1" onclick="openFullscreen(this)">
@@ -227,22 +198,32 @@
         <div class="image-container">
             <img src="https://i.hizliresim.com/hljwsvz.jpg" alt="Resim 4" onclick="openFullscreen(this)">
         </div>
+    </div>
 
+    <!-- Video -->
+    <div class="video-container">
+        <video controls>
+            <source src="https://streamable.com/bddzoo" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
+    <!-- Tam ekran görsel alanı -->
     <div class="fullscreen" id="fullscreen-container">
-        <button class="close-btn" onclick="closeFullscreen()">×</button>
+        <span class="close-btn" onclick="closeFullscreen()">✖</span>
         <img id="fullscreen-image" src="" alt="Fullscreen Image">
     </div>
 
     <script>
         function openFullscreen(imgElement) {
-            var fullscreenContainer = document.getElementById('fullscreen-container');
-            var fullscreenImage = document.getElementById('fullscreen-image');
+            const fullscreenContainer = document.getElementById('fullscreen-container');
+            const fullscreenImage = document.getElementById('fullscreen-image');
             fullscreenImage.src = imgElement.src;
             fullscreenContainer.classList.add('active');
         }
 
         function closeFullscreen() {
-            var fullscreenContainer = document.getElementById('fullscreen-container');
+            const fullscreenContainer = document.getElementById('fullscreen-container');
             fullscreenContainer.classList.remove('active');
         }
     </script>
