--- a/test.html
+++ b/test.html
@@ -203,7 +203,7 @@
     <!-- Video -->
     <div class="video-container">
         <video controls>
-            <source src="https://streamable.com/bddzoo" type="video/mp4">
+            <source src="https://cdn.discordapp.com/attachments/1304891541021528146/1325450298357059614/bddzoo.mp4?ex=677bd548&is=677a83c8&hm=3ce22e67ffb721ea4d4ede772fef5db24474968ff44d1e4c88a5f09687b43ab0&" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
