--- a/tier.html
+++ b/tier.html
@@ -159,7 +159,7 @@
     </div>
 
     <footer>
-        © 2025 FFA Maç Kuralları. 
+        © 2025 FFA Maç Kuralları. Tüm hakları saklıdır.
     </footer>
 </body>
 </html>
