--- a/tier.html
+++ b/tier.html
@@ -58,11 +58,10 @@
             transition: transform 0.4s, box-shadow 0.4s;
             color: #ffffff;
             font-family: 'Zilla Slab Highlight', cursive;
-            box-shadow: 0 0 15px rgba(255, 87, 34, 0.7);
         }
 
         .rule:hover {
-            transform: scale(1.05) rotate(2deg);
+            transform: scale(1.1) rotate(1deg);
             box-shadow: 0 0 40px #ff5722, 0 0 60px #ff9800;
         }
 
@@ -78,7 +77,6 @@
             margin: 10px 0 0;
             font-size: 1.4rem;
             line-height: 1.8;
-            color: #ffffff;
         }
 
         .rule-number {
@@ -101,15 +99,6 @@
             font-size: 1.2rem;
             border-top: 4px solid #ff5722;
             text-shadow: 0 0 10px #ffcc00;
-        }
-
-        footer a {
-            color: #ffcc00;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
         }
     </style>
 </head>
@@ -170,7 +159,7 @@
     </div>
 
     <footer>
-        © 2025 FFA Maç Kuralları | <a href="#"></a>
+        © 2025 FFA Maç Kuralları. Tüm hakları saklıdır.
     </footer>
 </body>
 </html>
