--- a/tier.html
+++ b/tier.html
@@ -18,7 +18,7 @@
         }
 
         @keyframes gradientMove {
-            0% { background-position: 0% 50%; }
+            0% { background-position: 0% 50%; }A
             50% { background-position: 100% 50%; }
             100% { background-position: 0% 50%; }
         }
