--- a/tier.html
+++ b/tier.html
@@ -1,165 +1,145 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FFA Maç Kuralları</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Zilla+Slab+Highlight:wght@700&display=swap');
-
         body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to bottom, #2c3e50, #bdc3c7);
+            color: #fff;
             margin: 0;
-            font-family: 'Orbitron', sans-serif;
-            background: linear-gradient(135deg, #120078, #9d0191, #fd3a69, #ffb30f);
-            background-size: 400% 400%;
-            animation: gradientMove 8s ease infinite;
-            color: #ffffff;
+            padding: 0;
             overflow-x: hidden;
         }
 
-        @keyframes gradientMove {
-            0% { background-position: 0% 50%; }A
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
-        h1 {
+        header {
+            background: #34495e;
             text-align: center;
-            font-size: 4rem;
-            margin-top: 20px;
-            color: #ffeb3b;
-            text-shadow: 0 0 15px #ffeb3b, 0 0 30px #ff9800;
-            animation: pulse 3s infinite;
-        }
-
-        @keyframes pulse {
-            0% { text-shadow: 0 0 15px #ffeb3b, 0 0 30px #ff9800; }
-            50% { text-shadow: 0 0 30px #ffc107, 0 0 60px #ff5722; }
-            100% { text-shadow: 0 0 15px #ffeb3b, 0 0 30px #ff9800; }
+            padding: 40px;
+            font-size: 2em;
+            font-weight: bold;
+            text-transform: uppercase;
         }
 
         .container {
-            max-width: 1400px;
-            margin: 40px auto;
             padding: 20px;
-            background: rgba(0, 0, 0, 0.85);
-            border-radius: 20px;
-            border: 4px solid #ff9800;
-            box-shadow: 0 0 30px #ff5722;
+            max-width: 1200px;
+            margin: 0 auto;
         }
 
-        .rule {
-            background: rgba(255, 87, 34, 0.85);
-            border: 2px solid #ffcc00;
-            padding: 20px;
-            border-radius: 15px;
-            margin-bottom: 20px;
-            position: relative;
-            transition: transform 0.4s, box-shadow 0.4s;
-            color: #ffffff;
-            font-family: 'Zilla Slab Highlight', cursive;
+        h2 {
+            color: #ecf0f1;
+            text-align: center;
+            font-size: 1.8em;
+            margin-top: 30px;
         }
 
-        .rule:hover {
-            transform: scale(1.1) rotate(1deg);
-            box-shadow: 0 0 40px #ff5722, 0 0 60px #ff9800;
-        }
-
-        .rule h2 {
+        .rules {
+            list-style-type: none;
+            padding: 0;
             margin: 0;
-            color: #ffeb3b;
-            font-size: 1.8rem;
-            text-transform: uppercase;
-            text-shadow: 0 0 10px #ffeb3b, 0 0 20px #ff9800;
         }
 
-        .rule p {
-            margin: 10px 0 0;
-            font-size: 1.4rem;
-            line-height: 1.8;
-        }
-
-        .rule-number {
-            position: absolute;
-            top: -20px;
-            left: -20px;
-            background: #ff5722;
-            color: #fff;
-            font-size: 1.5rem;
+        .rules li {
+            background: #34495e;
+            margin: 15px 0;
             padding: 15px;
-            border-radius: 50%;
-            box-shadow: 0 0 15px #ff5722, 0 0 30px #ffcc00;
+            border-radius: 8px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            position: relative;
+            transition: transform 0.3s ease;
+        }
+
+        .rules li:hover {
+            transform: scale(1.05);
+        }
+
+        .rules li::before {
+            content: "⚽";
+            font-size: 1.2em;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+        }
+
+        .rules li p {
+            font-size: 1.1em;
+            line-height: 1.5em;
+            margin: 0;
+        }
+
+        .highlight {
+            color: #f39c12;
+            font-weight: bold;
+        }
+
+        .rule-title {
+            font-size: 1.4em;
+            color: #e74c3c;
+            margin-bottom: 10px;
         }
 
         footer {
+            background: #34495e;
+            padding: 20px;
             text-align: center;
-            padding: 20px 0;
-            background: #1b0033;
-            color: #ffcc00;
-            font-size: 1.2rem;
-            border-top: 4px solid #ff5722;
-            text-shadow: 0 0 10px #ffcc00;
+            font-size: 0.9em;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        /* Animation */
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+
+        .container {
+            animation: fadeIn 2s ease-out;
+        }
+
+        .rules li {
+            animation: fadeIn 1.5s ease-out;
         }
     </style>
 </head>
 <body>
-    <h1>FFA Maç Kuralları</h1>
+    <header>
+        FFA Maç Kuralları
+    </header>
 
     <div class="container">
-        <div class="rule">
-            <div class="rule-number">1</div>
-            <h2>Emergency Rule</h2>
-            <p>Eğer maçtan önce 1 saat içinde oyuncu alındıysa karşı takım 1-0 önde başlar. Eğer maç içinde emergency alınırsa karşı takıma +2 gol verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">2</div>
-            <h2>Loan Rule</h2>
-            <p>Sadece maçın kaderini değiştirmeyecek belli kişiler loan alınabilir ve her sezon takım başına ligde maksimum 2, kupada ise 1 loan alınabilir. Fazlası alınırsa karşı takıma auto verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">3</div>
-            <h2>3. Parti Yazılım</h2>
-            <p>Clumsy, VPN, Script, FastFlag gibi yazılımlar yasaktır. (Roblox’un Yasaklanması gibi olağan şeyler dışında)</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">4</div>
-            <h2>PB</h2>
-            <p>Defans oyuncusu kendi kalecisine yerden pas atarsa ve kaleci eline alırsa 1/2. Eğer 2 kere yapılırsa +1.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">5</div>
-            <h2>CK Rush</h2>
-            <p>Korner kullanan oyuncuya rush yapmak 1/2'dir. 2. kez yapılırsa yc, 3. kez yapılırsa 2. yc verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">6</div>
-            <h2>Last</h2>
-            <p>Eğer gole giden bir oyuncuya karşı takım kayarsa (önünde başka oyuncu olmama şartıyla) +1 gol ve yc verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">7</div>
-            <h2>Leave Ball</h2>
-            <p>Eğer rakip takımdan bir oyuncuya kayıp topu alırsanız geri bırakmak zorundasınız. Eğer dokunursanız veya 3 saniye dolmadan topu alırsanız yc verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">8</div>
-            <h2>Last CB</h2>
-            <p>Eğer ataktayken karşı takımın stoperine kayıp gol atarsanız gol iptali ve yc verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">9</div>
-            <h2>Visu, 3x, 4x, 5x</h2>
-            <p>Bunun gibi kombinasyonlar hem şutta hem de pasta yasaktır. 1/2'dir, 2. yapılışında yc verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">36</div>
-            <h2>GK Combo</h2>
-            <p>GK'da her türlü kombinasyon yasaktır. (örneğin: x lmb). Cezası yc'dir.</p>
-        </div>
+        <h2>Kurallar</h2>
+        <ul class="rules">
+            <li>
+                <div class="rule-title">1. Emergency Rule</div>
+                <p>Eğer maçtan önce 1 saat içinde oyuncu alındıysa karşı takım 1-0 önde başlar. Eğer maç içinde emergency alınırsa karşı takıma +2 goal verilir.</p>
+            </li>
+            <li>
+                <div class="rule-title">2. Loan Rule</div>
+                <p>Sadece maçın kaderini değiştirmicek belli kişiler loan alınabilir. Ligde maksimum 2, kupada ise 1 loan alınabilir. Fazlası alınırsa karşı takıma auto verilir.</p>
+            </li>
+            <li>
+                <div class="rule-title">3. 3. Parti Yazılım</div>
+                <p>Clumsy, VPN, Script, FastFlag vs. yasaktır. (Roblox’un Yasaklanması gibi Olağan şeyler dışında)</p>
+            </li>
+            <li>
+                <div class="rule-title">4. PB</div>
+                <p>Defans oyuncusu kendi kalecisine yerden pas atarsa ve kaleci eline alırsa 1/2 dir. 2 kere yapılırsa +1’dir.</p>
+            </li>
+            <!-- Burada diğer kuralları da benzer şekilde ekleyebilirsiniz. -->
+        </ul>
     </div>
 
     <footer>
-        © 2025 FFA Maç Kuralları. Tüm hakları saklıdır.
+        © 2025 FFA - Tüm Hakları Saklıdır.
     </footer>
 </body>
 </html>
