--- a/tier.html
+++ b/tier.html
@@ -9,7 +9,7 @@
         /* Genel Ayarlar */
         body {
             font-family: 'Press Start 2P', cursive;
-            background-color: #ff66b2; /* Pembe Arka Plan */
+            background-color: #ff33cc; /* Site Arka Planı - Pembe */
             color: #ffffff;
             margin: 0;
             padding: 0;
@@ -23,22 +23,23 @@
             padding: 50px;
             background: #222;
             color: #00ff00; /* Neon Yeşil */
-            font-size: 3em;
+            font-size: 4em;
             letter-spacing: 2px;
             text-transform: uppercase;
             text-shadow: 0 0 10px #00ff00, 0 0 30px #00ff00, 0 0 40px #00ff00;
         }
 
-        /* Kural Listesi */
+        /* Kural Listesi Container */
         .container {
-            padding: 20px;
-            max-width: 800px;
+            padding: 40px 20px;
+            max-width: 1000px; /* Daha geniş yapı */
             margin: 40px auto;
-            background: #1e1e1e;
+            background: #ffffff;
             border-radius: 15px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
         }
 
+        /* Rule (Kural) Listesi */
         .rules {
             list-style: none;
             padding: 0;
@@ -46,19 +47,19 @@
         }
 
         .rules li {
-            background-color: #333;
+            background-color: #ff66b2; /* Kural Arka Planı - Pembe */
             margin: 15px 0;
-            padding: 25px;
+            padding: 30px;
             border-radius: 10px;
             position: relative;
             border-left: 8px solid #00ff00;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
-            font-size: 1.2em;
+            font-size: 1.3em;
             transition: all 0.3s ease;
         }
 
         .rules li:hover {
-            background-color: #444;
+            background-color: #ff80cc;
             transform: translateY(-5px);
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
         }
@@ -71,13 +72,13 @@
             color: #fff;
             padding: 10px 15px;
             border-radius: 50%;
-            font-size: 2em;
+            font-size: 2.5em;
             font-weight: bold;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
         }
 
         .rule-title {
-            font-size: 1.4em;
+            font-size: 1.5em;
             color: #00ff00;
             font-weight: bold;
             text-transform: uppercase;
@@ -86,7 +87,7 @@
 
         .rule-description {
             color: #ddd;
-            font-size: 1em;
+            font-size: 1.2em;
             line-height: 1.6;
         }
 
@@ -127,7 +128,7 @@
         /* Mobil uyumluluk */
         @media screen and (max-width: 768px) {
             header {
-                font-size: 2.5em;
+                font-size: 3em;
             }
 
             .rules li {
@@ -183,7 +184,7 @@
 </div>
 
 <footer>
-    © 2025 FFA - Tüm Hakları Saklıdır. | <a href="#">Gizlilik Politikası</a>
+    © 2025 FFA | <a href="#"></a>
 </footer>
 
 </body>
