--- a/tier.html
+++ b/tier.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FFA Maç Kuralları </title>
+    <title>FFA Maç Kuralları</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
         /* Genel Ayarlar */
@@ -23,7 +23,7 @@
             padding: 50px;
             background: #222;
             color: #00ff00; /* Neon Yeşil */
-            font-size: 4em;
+            font-size: 3.5em;
             letter-spacing: 2px;
             text-transform: uppercase;
             text-shadow: 0 0 10px #00ff00, 0 0 30px #00ff00, 0 0 40px #00ff00;
@@ -32,7 +32,7 @@
         /* Kural Listesi Container */
         .container {
             padding: 40px 20px;
-            max-width: 1000px; /* Daha geniş yapı */
+            max-width: 800px; /* Daha dar yapı */
             margin: 40px auto;
             background: #ffffff;
             border-radius: 15px;
@@ -146,7 +146,7 @@
 <body>
 
 <header>
-    FFA Maç Kuralları - Atari Teması
+    FFA Maç Kuralları
 </header>
 
 <div class="container">
@@ -184,7 +184,7 @@
 </div>
 
 <footer>
-    © 2025 FFA | <a href="#"></a>
+    © 2025 FFA - Tüm Hakları Saklıdır. | <a href="#">Gizlilik Politikası</a>
 </footer>
 
 </body>
