--- a/tier.html
+++ b/tier.html
@@ -32,7 +32,7 @@
         /* Kural Listesi Container */
         .container {
             padding: 40px 20px;
-            max-width: 800px; /* Daha dar yapı */
+            max-width: 900px; /* Daha geniş yapı */
             margin: 40px auto;
             background: #ffffff;
             border-radius: 15px;
@@ -49,12 +49,13 @@
         .rules li {
             background-color: #ff66b2; /* Kural Arka Planı - Pembe */
             margin: 15px 0;
-            padding: 30px;
+            padding: 25px;
             border-radius: 10px;
             position: relative;
             border-left: 8px solid #00ff00;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
-            font-size: 1.3em;
+            font-size: 1.2em; /* Yazı boyutunu küçültüldü */
+            line-height: 1.6;
             transition: all 0.3s ease;
         }
 
@@ -78,7 +79,7 @@
         }
 
         .rule-title {
-            font-size: 1.5em;
+            font-size: 1.4em;
             color: #00ff00;
             font-weight: bold;
             text-transform: uppercase;
