--- a/tier.html
+++ b/tier.html
@@ -150,7 +150,7 @@
     </div>
 
     <footer>
-        © 2025 FFA Maç Kuralları. Tüm hakları saklıdır.
+        © 2025 FFA Maç Kuralları
     </footer>
 </body>
 </html>
