--- a/weather.html
+++ b/weather.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Detaylı Yağmur Tahmini</title>
+  <title>Detaylı Hava Durumu</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, #74b9ff, #0984e3);
+      background: linear-gradient(to bottom, #6dd5fa, #2980b9);
       color: white;
       text-align: center;
     }
@@ -17,7 +17,7 @@
       padding: 20px;
       max-width: 700px;
       margin: 50px auto;
-      background: rgba(0, 0, 0, 0.2);
+      background: rgba(0, 0, 0, 0.3);
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
     }
@@ -32,7 +32,7 @@
 
     .search-box button {
       padding: 10px 20px;
-      background: #0984e3;
+      background: #3498db;
       color: white;
       border: none;
       border-radius: 5px;
@@ -57,7 +57,7 @@
 </head>
 <body>
   <div class="weather-app">
-    <h1>Detaylı Yağmur Tahmini</h1>
+    <h1>Detaylı Hava Durumu</h1>
     <div class="search-box">
       <input type="text" id="city-input" placeholder="Şehir veya İlçe Adını Girin">
       <button onclick="getWeather()">Tahmin Göster</button>
@@ -65,8 +65,13 @@
     <div class="weather-info" id="weather-info">
       <h2 id="city-name"></h2>
       <p id="current-weather"></p>
-      <p id="rain-info"></p>
-      <p id="rain-details"></p>
+      <p id="temperature"></p>
+      <p id="wind"></p>
+      <p id="humidity"></p>
+      <p id="pressure"></p>
+      <p id="uv-index"></p>
+      <p id="visibility"></p>
+      <p id="clouds"></p>
     </div>
   </div>
 
@@ -90,40 +95,25 @@
           throw new Error("Şehir bulunamadı!");
         }
 
-        const { lat, lon } = geocodeData[0];
+        const { lat, lon, name } = geocodeData[0];
 
-        // Saatlik hava durumu tahmini için One Call API
-        const apiUrl = `https://api.openweathermap.org/data/2.5/onecall?lat=${lat}&lon=${lon}&units=metric&lang=tr&exclude=minutely,daily&appid=${apiKey}`;
+        // Hava durumu bilgisi için One Call API
+        const apiUrl = `https://api.openweathermap.org/data/2.5/onecall?lat=${lat}&lon=${lon}&units=metric&lang=tr&exclude=minutely,hourly,daily&appid=${apiKey}`;
         const response = await fetch(apiUrl);
         const data = await response.json();
 
-        // Şu anki durum
+        // Bilgileri doldur
         const currentWeather = data.current;
-        const hourlyForecast = data.hourly;
 
-        document.getElementById("city-name").innerText = `Şehir: ${city}`;
-        document.getElementById("current-weather").innerText = `Anlık Sıcaklık: ${currentWeather.temp}°C, Durum: ${currentWeather.weather[0].description}`;
-
-        // Yağmur bilgisi (ilk yağmurun ne zaman yağacağını bulma)
-        const rainForecast = hourlyForecast.find(hour => hour.rain);
-        if (rainForecast) {
-          const rainTime = new Date(rainForecast.dt * 1000); // Zamanı formatla
-          const rainAmount = rainForecast.rain["1h"] || 0; // Yağış miktarı
-
-          document.getElementById("rain-info").innerText = `Yağmur Bekleniyor: ${rainTime.toLocaleDateString()} tarihinde, ${rainTime.toLocaleTimeString()} saatinde.`;
-          document.getElementById("rain-details").innerText = `Yağış Miktarı: ${rainAmount.toFixed(2)} mm`;
-        } else {
-          // Eğer yağmur tahmini yoksa, sonraki yağmuru bul
-          const futureRain = hourlyForecast.find(hour => hour.pop > 0.3); // "pop" olasılığı %30'dan büyük olan
-          if (futureRain) {
-            const futureRainTime = new Date(futureRain.dt * 1000);
-            document.getElementById("rain-info").innerText = `Yağmur şu anda beklenmiyor.`;
-            document.getElementById("rain-details").innerText = `İlk yağış tahmini: ${futureRainTime.toLocaleDateString()} tarihinde, ${futureRainTime.toLocaleTimeString()} saatinde.`;
-          } else {
-            document.getElementById("rain-info").innerText = "Yakın gelecekte yağmur beklenmiyor.";
-            document.getElementById("rain-details").innerText = "";
-          }
-        }
+        document.getElementById("city-name").innerText = `Şehir: ${name}`;
+        document.getElementById("current-weather").innerText = `Durum: ${currentWeather.weather[0].description}`;
+        document.getElementById("temperature").innerText = `Anlık Sıcaklık: ${currentWeather.temp}°C`;
+        document.getElementById("wind").innerText = `Rüzgar: ${currentWeather.wind_speed} m/s, Yön: ${currentWeather.wind_deg}°`;
+        document.getElementById("humidity").innerText = `Nem: %${currentWeather.humidity}`;
+        document.getElementById("pressure").innerText = `Basınç: ${currentWeather.pressure} hPa`;
+        document.getElementById("uv-index").innerText = `UV Endeksi: ${currentWeather.uvi}`;
+        document.getElementById("visibility").innerText = `Görüş Mesafesi: ${currentWeather.visibility / 1000} km`;
+        document.getElementById("clouds").innerText = `Bulutluluk: %${currentWeather.clouds}`;
 
         weatherInfo.style.display = "block";
       } catch (error) {
