--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <!-- Video Ekleme Alanı -->
         <div class="video-container">
             <video controls>
-                <source src="https://cdn.discordapp.com/attachments/1196885529845829674/1316820602002079805/inter_tecavuz.mp4?ex=677c1440&is=677ac2c0&hm=094ef4134164d76d64f3c3009b0c2cfe9ae5c27bb0adfb74511576c57c9f1e14&" type="video/mp4">
+                <source src="https://cdn.discordapp.com/attachments/1196893026635743323/1325827004968468520/ssstik.io_thunderrbreak_1729334131687.mp4?ex=677ddcde&is=677c8b5e&hm=7606838e13e9b11f0a18e3ef20428dcbfcf8c1e492f881998d22bf9aca340c6e&" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
